entrega sin pruebas

--- a/src/views/realtimeproducts.handlebars
+++ b/src/views/realtimeproducts.handlebars
@@ -4,19 +4,19 @@
 
 <h2>Formulario productos nuevos</h2>
 
-<form>
-    <input type="text" id="title" placeholder="Titulo">
-    <input type="text" id="description" placeholder="Descripción">
-    <input type="number" id="price" placeholder="Precio">
-    <select id="status">
+<form class="formulario">
+    <input class="formInput" type="text" id="title" placeholder="Titulo">
+    <input class="formInput" type="text" id="description" placeholder="Descripción">
+    <input class="formInput" type="number" id="price" placeholder="Precio">
+    <select class="formInput" id="status">
         <option value="true"> Activo </option>
         <option value="false"> Inactivo </option>
     </select>
-    <input type="text" id="thumbnails" value="sin Thumbnails">
-    <input type="text" id="code" placeholder="Codigo">
-    <input type="number" id="stock" placeholder="Stock">
-    <input type="text" id="category" placeholder="Categoria">
-    <button type="button" id="btnEnv"> Enviar </button>
+    <input class="formInput" type="text" id="thumbnails" value="sin Thumbnails">
+    <input class="formInput" type="text" id="code" placeholder="Codigo">
+    <input class="formInput" type="number" id="stock" placeholder="Stock">
+    <input class="formInput" type="text" id="category" placeholder="Categoria">
+    <button class="btn" type="button" id="btnEnv"> Enviar </button>
 </form>
 
 <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
