--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,12 +1,32 @@
-<h1>Todos nuestros productos</h1>
-<br>
-<div>
-    {{#each products}}
-        <div>
-            <p> <b> {{this.title}} </b> </p>
-            <p> {{this.description}} </p>
-            <p> {{this.stock}} </p>
-            <p> <b> {{this.price}} </b> </p><br><br>
+<div class="container">
+    <h1>Todos nuestros productos</h1>
+    <div class="productItems">
+        {{#each docs}}
+        <div class="product">
+            <p><strong>ID:</strong> {{_id}}</p>
+            <p><strong>Títuto:</strong> {{title}}</p>
+            <p><strong>Descripción:</strong> {{description}}</p>
+            <p><strong>Precio:</strong> {{price}}</p>
+            <p><strong>Thumbnails:</strong> {{thumbnails}}</p>
+            <p><strong>Código:</strong> {{code}}</p>
+            <p><strong>Stock:</strong> {{stock}}</p>
+            <p><strong>Categoria:</strong> {{category}}</p>
+            <form action="/api/carts/:cid/products/{{_id}}" method="post">
+                <input type="hidden" name="quantity" value="1">
+                <button type="submit">Agregar al carrito</button>
+            </form>
         </div>
-    {{/each}}
+        {{else}}
+        <div class="product">Productos no disponibles.</div>
+        {{/each}}
+    </div>
+    <div class="pagination">
+        {{#if hasPrevPage}}
+        <a href="/products?page={{prevPage}}&limit={{limit}}&sort={{sort}}">Anterior</a>
+        {{/if}}
+        <span>Página {{page}} de {{totalPages}}</span>
+        {{#if hasNextPage}}
+        <a href="/products?page={{nextPage}}&limit={{limit}}&sort={{sort}}">Siguiente</a>
+        {{/if}}
+    </div>
 </div>
