--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Back-End</title>
 </head>
 <body>
     {{{body}}}
+
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
